--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <title>Struttura Discord</title>
 </head>
 <body>
+
+    <header>
+        <nav>
+            <div class="logo">logo</div>
+            <div class="link">link link link link link</div>
+            <div class="login">login</div>
+        </nav>
+
+        <div class="box_pink"></div>
+        
+
+    </header>
     
+
+
 </body>
 </html>
