--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </section>
 
         <section>
-            <div class="section lightgray">
+            <div class="section lightgray transform">
                 <div class="box lightblue"></div>
                 <div class="box lightpink"></div>
             </div>
